# bearace

./: .gitignore  README.md  install-non-python-deps.sh  julia.ipynb  notebook.ipynb  pyproject.toml  smaller-files.ipynb
.devcontainer/: devcontainer.json
bearace/: create_test_dataset.py
other-approaches/cpp/: bearless.cpp
