[tool.poetry]
name = "bearace"
version = "0.1.0"
description = ""
authors = ["Cristian Dinu <c.dinu@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
dask = "^2023.11.0"
polars = "^0.19.15"
duckdb = "^0.9.2"
numpy = "^1.26.2"
pyarrow = "^14.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pylint = "^3.0.2"
pytest = "^7.4.3"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
